--- a/publication.html
+++ b/publication.html
@@ -116,7 +116,7 @@ In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 X. Xu, S. Kong, T. Hu, Z. Liu, H. Bao
 <br>
 In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
-[paper]
+[<a href="https://arxiv.org/pdf/2403.06793.pdf">paper</a>]
 <br>
 </td>
 		
