--- a/publication.html
+++ b/publication.html
@@ -46,6 +46,26 @@
 
 
 
+
+<tr>
+<td width="35%" height=150>
+<a href="./">
+<img src="aimerykong_files/UUO-mocap.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="./"><b>Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</b></a>
+<br>
+N. Milef, J. Keyser, S. Kong
+<br>
+In <a href="https://s2024.siggraph.org/">SIGGRAPH</a>, 2024<br>
+[<a href="./">to appear</a>]
+<br>
+</td>	
+
+	
+
+
 <tr>
 <td width="35%" height=150>
 <a href="https://arxiv.org/abs/2401.12425">
