--- a/index.html
+++ b/index.html
@@ -146,6 +146,22 @@
 <ul style="font-size:13px;font-family:Times">
 
 
+
+
+
+
+
+
+<li>
+<p>
+Congratulations to <a href="http://www.nicholasmilef.com/">Nick</a> on the SIGGRAPH'24
+<img src="./aimerykong_files/siggraph24.jpg", height="20"></a> 
+	paper "<a href="./"  target="_blank">Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</a>"! (3/23/2024)
+</a>
+</li>
+
+
+	
 <li>
 <p>
 Call for demos at <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20">CVPR'24</a>! If you have exciting demos, 
