--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 
 <li>
 <p>
-Congratulations to <a href="http://www.nicholasmilef.com/">Nick</a> on the SIGGRAPH'24
-<img src="./aimerykong_files/siggraph24.jpg", height="20"></a> 
+Congratulations to <a href="http://www.nicholasmilef.com/">Nick</a> on the  <a href="https://s2024.siggraph.org/"  target="_blank">SIGGRAPH'24
+<img src="./aimerykong_files/siggraph24.jpg", height="25"></a> 
 	paper "<a href="./"  target="_blank">Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</a>"! (3/23/2024)
 </a>
 </li>
@@ -164,7 +164,7 @@ Congratulations to <a href="http://www.nicholasmilef.com/">Nick</a> on the SIGGR
 	
 <li>
 <p>
-Call for demos at <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20">CVPR'24</a>! If you have exciting demos, 
+Call for demos at <a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank"><img src="./aimerykong_files/cvpr24-logo2.jpg", height="20">CVPR'24</a>! If you have exciting demos, 
 	consider to submit and present at CVPR in June at Seattle! 
 	The submission is trivial and its deadline is this Sunday, Mar 10, 2024 11:59 PM AOE. 
 	<a href='https://cvpr.thecvf.com/Conferences/2024/CallForDemos'>Here is the link to submit</a>.
@@ -175,7 +175,8 @@ Call for demos at <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20">CV
 <li>
 <p>
 Congratulations to <a href="https://shubhamprshr27.github.io/">Shubham</a>, <a href="https://www.linkedin.com/in/tian1327/">Tian</a>, 
-	and <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the CVPR'24
+	and <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the 
+	<a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank">CVPR'24
 <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
 	paper "<a href="https://shubhamprshr27.github.io/neglected-tails-of-vlms"  target="_blank">The Neglected Tails of Vision-Language Models</a>"! (2/27/2024)
 </a>
@@ -184,7 +185,8 @@ Congratulations to <a href="https://shubhamprshr27.github.io/">Shubham</a>, <a h
 
 <li>
 <p>
-Congratulations to <a href="https://ics.uci.edu/~yunhaz5/">Yunhan</a> on the CVPR'24
+Congratulations to <a href="https://ics.uci.edu/~yunhaz5/">Yunhan</a> on the 
+	<a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank">CVPR'24
 <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
 	paper "<a href="https://arxiv.org/abs/2312.04117"  target="_blank">Instance Tracking in 3D Scenes from Egocentric Videos</a>"! (2/27/2024)
 </a>
@@ -193,7 +195,8 @@ Congratulations to <a href="https://ics.uci.edu/~yunhaz5/">Yunhan</a> on the CVP
 
 <li>
 <p>
-Congratulations to <a href="https://github.com/SunzeY">Zeyi</a> and <a href="https://github.com/Aleafy">Ye</a> on the CVPR'24
+Congratulations to <a href="https://github.com/SunzeY">Zeyi</a> and <a href="https://github.com/Aleafy">Ye</a> on the 
+	<a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank">CVPR'24
 <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
 	paper "<a href="https://aleafy.github.io/alpha-clip/"  target="_blank">Alpha-CLIP: A CLIP Model Focusing on Wherever You Want</a>"! (2/27/2024)
 </a>
@@ -203,7 +206,8 @@ Congratulations to <a href="https://github.com/SunzeY">Zeyi</a> and <a href="htt
 
 <li>
 <p>
-Congratulations to <a href="http://xuxiaogang.com/">Xiaogang</a> on the CVPR'24
+Congratulations to <a href="http://xuxiaogang.com/">Xiaogang</a> on the 
+	<a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank">CVPR'24
 <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
 	paper "<a href="https://arxiv.org/pdf/2403.06793.pdf"  target="_blank">Boosting Image Restoration via Priors from Pre-trained Models</a>"! (2/27/2024)
 </a>
@@ -214,7 +218,8 @@ Congratulations to <a href="http://xuxiaogang.com/">Xiaogang</a> on the CVPR'24
 
 <li>
 <p>
-Congratulations to <a href="https://nahyunkwon.github.io/">Nahyun</a>, <a href="https://hcied.info/hcieders.html">Emory, Muhammad, and Joanne</a> on the CHI'24
+Congratulations to <a href="https://nahyunkwon.github.io/">Nahyun</a>, <a href="https://hcied.info/hcieders.html">Emory, Muhammad, and Joanne</a> on the 
+	<a href="https://chi2024.acm.org/"  target="_blank">CHI'24
 <img src="./aimerykong_files/CHI2024.jpg", height="20"></a> 
 	paper "<a href="https://arxiv.org/abs/2401.15996"  target="_blank">AccessLens: Auto-detecting Inaccessibility of Everyday Objects</a>"! (1/19/2024)
 </a>
