--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		Panalist: NSF GRFP
 	</li>	
 	<li>
-		Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ICML, IJCV, PAMI, RA-L, TIP, Nature, PLOS One, etc.
+		Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ACL, ICML, IJCV, PAMI, Nature, PLOS One, RA-L, TIP, etc.
 	</li>	
 </ul>
 
