--- a/publication.html
+++ b/publication.html
@@ -50,7 +50,7 @@
 <tr>
 <td width="35%" height=150>
 <a href="./">
-<img src="aimerykong_files/UUO-mocap.jpg" height="120"  border="0">
+<img src="aimerykong_files/UUO-mocaps.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
@@ -58,7 +58,7 @@
 <br>
 N. Milef, J. Keyser, S. Kong
 <br>
-In <a href="https://s2024.siggraph.org/">SIGGRAPH</a>, 2024<br>
+In <a href="https://s2024.siggraph.orgs/">sggph</a>, 2024<br>
 [<a href="./">to appear</a>]
 <br>
 </td>	
