--- a/publication.html
+++ b/publication.html
@@ -58,7 +58,7 @@
 <br>
 N. Milef, J. Keyser, S. Kong
 <br>
-In <a href="https://s2024.siggraph.org/">SIGGRAPH</a>, 2024<br>
+In <a href="https://s2024.siggraph.orgs/">sggph</a>, 2024<br>
 [<a href="./">to appear</a>]
 <br>
 </td>	
