--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 <li>
 <p>
 Congratulations to <a href="http://www.nicholasmilef.com/">Nick</a> on the  
-	<!--a href="https://s2024.siggraph.orgs/"  target="_blank">sggrh<img src="./aimerykong_files/siggraph24s.jpg", height="25"></a-->
-	<a href="https://s2024.siggraph.org/"  target="_blank">SIGGRAPH'24<img src="./aimerykong_files/siggraph24.jpg", height="25"></a> 
+	<a href="https://s2024.siggraph.orgs/"  target="_blank">sggrh<img src="./aimerykong_files/siggraph24s.jpg", height="25"></a>
+	<!--a href="https://s2024.siggraph.org/"  target="_blank">SIGGRAPH'24<img src="./aimerykong_files/siggraph24.jpg", height="25"></a--> 
 	paper "<a href="./"  target="_blank">Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</a>"! (3/25/2024)
 </a>
 </li>
