--- a/index.html
+++ b/index.html
@@ -122,10 +122,8 @@
 <h3 style="font-size:20px;font-family:Times">Professional activities</h3>
 <ul style="font-size:13px;font-family:Times;line-height:15px">	
 	<li>
-		Demo Chair: <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR'24</a>		
-	</li>
-	<li>
-		Workshop Chair: <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR, WACV</a>
+		<a href="https://neurips.cc/Conferences/2024">Area Chair at NeurIPS'24</a>, <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR'24 Demo Chair</a>,	
+		organizer of <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR & WACV</a>
 	</li>
 	<li>
 		Panalist: NSF GRFP
