--- a/publication.html
+++ b/publication.html
@@ -78,7 +78,9 @@ In <a href="https://s2024.siggraph.orgs/">sggph</a>, 2024<br>
 S. Parashar, Z. Lin, T. Liu, X. Dong, Y. Li, D. Ramanan, J. Caverlee, S. Kong
 <br>
 In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
-[<a href="https://shubhamprshr27.github.io/neglected-tails-of-vlms/">webpage</a>][<a href="https://arxiv.org/abs/2401.12425">paper</a>]
+[<a href="https://shubhamprshr27.github.io/neglected-tails-of-vlms/">webpage</a>]
+[<a href="https://arxiv.org/abs/2401.12425">paper</a>]
+[<a href="https://github.com/shubhamprshr27/NeglectedTailsVLM">code</a>]
 <br>
 </td>
 
@@ -156,6 +158,7 @@ N. Kwon, Q. Lu, M. H. Qazi, J. Liu, C. Oh, S. Kong, J. Kim
 <br>
 In <a href="https://chi2024.acm.org/">CHI</a>, 2024<br>
 [<a href="https://arxiv.org/abs/2401.15996">paper</a>]
+[<a href="https://www.youtube.com/watch?v=HX0KW0VsDjw">video</a>]	
 <br>
 </td>
 		
