--- a/publication.html
+++ b/publication.html
@@ -159,7 +159,7 @@ N. Kwon, Q. Lu, M. H. Qazi, J. Liu, C. Oh, S. Kong, J. Kim
 In <a href="https://chi2024.acm.org/">CHI</a>, 2024<br>
 [<a href="https://arxiv.org/abs/2401.15996">paper</a>]
 [<a href="https://www.youtube.com/watch?v=HX0KW0VsDjw">video</a>]
-[<a href="https://access-lens.web.app/>website</a>]
+[<a href="https://access-lens.web.app/">website</a>]
 <br>
 </td>
 		
