--- a/publication.html
+++ b/publication.html
@@ -99,6 +99,7 @@ Y. Zhao, H. Ma, S. Kong, C. Fowlkes
 <br>
 In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 [<a href="https://arxiv.org/abs/2312.04117">paper</a>]
+[<a href="https://github.com/IT3DEgo/IT3DEgo/">code</a>]
 <br>
 </td>
 		
