--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
     	</div>
 
 		<div class="content">
+			<p style="font-size:16px;font-family:Times"> 
 			<div class="row">
 				<div class="col-sm-5">
 					<div class="list-group">
