--- a/publication.html
+++ b/publication.html
@@ -58,7 +58,7 @@
 <br>
 N. Milef, J. Keyser, S. Kong
 <br>
-In <a href="https://s2024.siggraph.orgs/">sggph</a>, 2024<br>
+In <a href="https://s2024.siggraph.org/">siggraph</a>, 2024<br>
 [<a href="./">to appear</a>]
 <br>
 </td>	
@@ -1259,6 +1259,61 @@ Pattern Recognition Letters, 2012
 <h3>Abstract/Workshop Papers</h3>
 <ul>
 
+<li>
+<div class="publication">
+<p> S. W. Punyasena, M. É. Adaïmé, and S. Kong, "<font color=#AF7817>Deep learning approaches to the phylogenetic placement of fossil pollen morphotypes</font>", 
+	<em>15th International Palynological Congress and 11th International Organization of Palaeobotany Conference</em>, Prague, Czech Republic; May 2024.
+<br>
+</p>
+</div>
+</li>
+
+
+	
+<li>
+<div class="publication">
+<p> S. W. Punyasena, J. T. Feng, S. Puthanveetil Satheesan, and S. Kong, "<font color=#AF7817>Development of a high-throughput fossil pollen analysis pipeline</font>",
+	<em>North American Paleontological Convention 2024</em>,  Ann Arbor, MI; June 2024.
+<br>
+</p>
+</div>
+</li>
+	
+
+<li>
+<div class="publication">
+<p> M. É. Adaïmé, S. Kong, M. A. Urban, and S. W. Punyasena, 
+	"<font color=#AF7817>Reconstructing the diversity dynamics of Late Quaternary East African grasslands using superresolution imaging of fossil Poaceae pollen and deep learning</font>", 
+	<em>North American Paleontological Convention 2024</em>,  Ann Arbor, MI; June 2024.
+<br>
+</p>
+</div>
+</li>
+
+	
+<li>
+<div class="publication">
+<p> M. É. Adaïmé, S. Kong, and S. W. Punyasena, 
+	"<font color=#AF7817>Using machine learning and superresolution imaging of fossil Poaceae to reconstruct the biodiversity dynamics of Late Quaternary East African grasslands</font>",  
+	<em>41st Annual Midcontinental Paleobotany Meeting</em>,  Field Museum, Chicago, IL; April 2024.
+<br>
+</p>
+</div>
+</li>
+
+
+
+<li>
+<div class="publication">
+<p> B. Lloyd, M. É Adaïmé, S. W. Punyasena, T. Gallaher, S. Kong, and C. E. Strömberg, 
+	"<font color=#AF7817>A deep learning approach to the taxonomic classification of grass silica short cell phytoliths</font>",  
+	<em>41st Annual Midcontinental Paleobotany Meeting</em>,  Field Museum, Chicago, IL; April 2024.
+<br>
+</p>
+</div>
+</li>
+
+	
 	
 <li>
 <div class="publication">
@@ -1270,8 +1325,51 @@ Pattern Recognition Letters, 2012
 </li>
 
 
+
+<li>
+<div class="publication">
+<p> M. É. Adaïmé, S. Kong, and S. W. Punyasena, "<font color=#AF7817>Deep learning approaches to the phylogenetic placement of extinct pollen morphotypes</font>",  
+	<em>Geological Society of America GSA Connects (2023 Annual Meeting)</em>,  Pittsburgh, PA; October 2023.
+<br>
+</p>
+</div>
+</li>
+
+
 	
 
+<li>
+<div class="publication">
+<p> M-E. Adaime, S. Kong, and S.W. Punyasena, "<font color=#AF7817>Deep metric learning and the phylogenetic placement of novel fossil pollen</font>", 
+	<em>39th Annual Midcontinental Paleobotany Meeting</em>, Oak Spring Foundation, Upperville, VA; May 2022.
+<br>
+</p>
+</div>
+</li>
+
+	
+	
+
+<li>
+<div class="publication">
+<p> M-E. Adaime, S. Kong, and S.W. Punyasena, "<font color=#AF7817>Phylogenetically-informed computer vision methods for fossil pollen classification: ecological and evolutionary implications</font>", 
+	<em>38th Annual Midcontinental Paleobotany Meeting</em>, vitural, hosted by University of California Berkley / University of Washington / University of Wyoming; June 2021.
+<br>
+</p>
+</div>
+</li>
+	
+	
+<li>
+<div class="publication">
+<p> M-E. Adaime, S. Kong, and S.W. Punyasena, "<font color=#AF7817>Phylogenetically-informed computer vision methods for fossil pollen classification: ecological and evolutionary implications</font>", 
+	<em>38th Annual Midcontinental Paleobotany Meeting</em>, vitural, hosted by University of California Berkley / University of Washington / University of Wyoming; June 2021.
+<br>
+</p>
+</div>
+</li>
+
+	
 	
 <li>
 <div class="publication">
@@ -1284,7 +1382,17 @@ Pattern Recognition Letters, 2012
 
 
 
+<li>
+<div class="publication">
+<p> I.C. Romero, S. Kong, C.C. Fowlkes, S.W. Punyasena, 
+	"<font color=#AF7817>Identification of the Cenozoic pollen morphospecies Striatopollis catatumbus (Amherstieae, Fabaceae) using convolutional neural nets</font>", 
+	<em>3rd Annual Digital Data in Biodiversity Research Conference</em>, New Haven, CT; June 2019.
+<br>
+</p>
+</div>
+</li>
 
+	
 
 <li>
 <div class="publication">
@@ -1300,7 +1408,8 @@ Pattern Recognition Letters, 2012
 
 <li>
 <div class="publication">
-<p>Ingrid Romero,  <b>Shu Kong</b>, Charless C. Fowlkes, Michael A. Urban, Surangi W. Punyasena, "<font color=#AF7817>Automated Neotropical Fossil Pollen Fabaceae Analysis Using Convolutional Neural Networks</font>",  <em>GSA Annual Meeting in Indianapolis, Indiana, USA</em>, 2018.
+<p>Ingrid Romero,  <b>Shu Kong</b>, Charless C. Fowlkes, Michael A. Urban, Surangi W. Punyasena, 
+	"<font color=#AF7817>Automated Neotropical Fossil Pollen Fabaceae Analysis Using Convolutional Neural Networks</font>",  <em>GSA Annual Meeting in Indianapolis, Indiana, USA</em>, 2018.
 </p>
 </div>
 </li>
@@ -1310,7 +1419,8 @@ Pattern Recognition Letters, 2012
 
 <li>
 <div class="publication">
-<p>Zhiyuan Fang,  <b>Shu Kong</b>, Tianshu Yu, Yezhou Yang, "<font color=#AF7817>Weakly Supervised Attention Learning for Textual Phrases Grounding</font>",  <em><a href="http://languageandvision.com/">Language and Vision Workshop</a> jointwith CVPR</em>, 2018.
+<p>Zhiyuan Fang,  <b>Shu Kong</b>, Tianshu Yu, Yezhou Yang, "<font color=#AF7817>Weakly Supervised Attention Learning for Textual Phrases Grounding</font>",  
+	<em><a href="http://languageandvision.com/">Language and Vision Workshop</a> jointwith CVPR</em>, 2018.
 </p>
 </div>
 </li>
@@ -1319,7 +1429,8 @@ Pattern Recognition Letters, 2012
 
 <li>
 <div class="publication">
-<p> <b>Shu Kong</b>, Charless C. Fowlkes, "<font color=#AF7817>Low-rank Bilinear Pooling for Fine-Grained Classification</font>",  <em><a href="https://sites.google.com/view/fgvc4/">the Fourth Workshop on Fine-grained Visual Categorization</a> joint with CVPR</em>, 2017.
+<p> <b>Shu Kong</b>, Charless C. Fowlkes, "<font color=#AF7817>Low-rank Bilinear Pooling for Fine-Grained Classification</font>", 
+	<em><a href="https://sites.google.com/view/fgvc4/">the Fourth Workshop on Fine-grained Visual Categorization</a> joint with CVPR</em>, 2017.
 </p>
 </div>
 </li>
@@ -1327,15 +1438,25 @@ Pattern Recognition Letters, 2012
 
 <li>
 <div class="publication">
-<p> <b>Shu Kong</b>, Charless C. Fowlkes, "<font color=#AF7817>Recurrent Scene Parsing with Perspective Understanding in the Loop</font>",  <em><a href="https://sites.google.com/view/socalml17/home"> Southern California Machine Learning Symposium</a></em>, 2017.
+<p> <b>Shu Kong</b>, Charless C. Fowlkes, "<font color=#AF7817>Recurrent Scene Parsing with Perspective Understanding in the Loop</font>", 
+	<em><a href="https://sites.google.com/view/socalml17/home"> Southern California Machine Learning Symposium</a></em>, 2017.
 </p>
 </div>
 </li>
 
+	
+<li>
+<div class="publication">
+<p> I. Romero, S. Kong, C.C. Fowlkes, M.A. Urban, C. D’Apolito, C. Jaramillo, F.E. Oboh-Ikuenobe, F.E., and S.W. Punyasena, "<font color=#AF7817>Novel morphological analysis of a fossil Fabaceae pollen type, Striatopollis catatumbus (tribe Detariae)</font>",  <em>Geological Society of America Abstracts with Programs (2017 Annual Meeting)</em>, doi: 10.1130/abs/2017AM-305572； Seattle, WA; October 2017.
+<br>
+</p>
+</div>
+</li>
+	
 
 <li>
 <div class="publication">
-<p> Ingrid Romero, <b>Shu Kong</b>, Charless C. Fowlkes, Michael A. Urban, Carlos D'Apolito, Carlos Jaramillo, OBOH-IKUENOBEA, Francisca E. Oboh-Ikuenobea, Surangi W. Punyasena, "<font color=#AF7817>NOVEL MORPHOLOGICAL ANALYSIS OF A FOSSIL FABACEAE POLLEN TYPE, STRIATOPOLLIS CATATUMBUS (TRIBE DETARIAE)</font>",  <em>GSA</em>, 2017.
+<p> I.C. Romero, S. Kong, C.C. Fowlkes, M.A. Urban, C.A. D’Apolito, C. Jaramillo, F. Oboh-Ikuenobe, and S.W. Punyasena, "<font color=#AF7817>Cenozoic biogeography of Striatopollis catatumbus (Fabaceae – Detariae)</font>",  <em>AASP-The Palynological Society</em>, Nottingham, England; September 2017.
 <br>
 </p>
 </div>
@@ -1344,32 +1465,26 @@ Pattern Recognition Letters, 2012
 
 <li>
 <div class="publication">
-<p> Romero, I.C., <b>S. Kong</b>, C.C. Fowlkes, M.A. Urban, C.A. D'Apolito, C. Jaramillo, F. Oboh-Ikuenobe, and S.W.
-Punyasena, "<font color=#AF7817>Cenozoic biogeography of Striatopollis catatumbus (Fabaceae  Detariae)</font>",  <em> AASP-The
-Palynological Society</em>, 2017.
+<p> Derek S. Haselhorst, <b>Shu Kong</b>, Charless C. Fowlkes, J. Enrique Moreno, David K. Tcheng, Surangi W. Punyasena, 
+	"<font color=#AF7817>Automating tropical pollen counts using convolutional neural nets: from image acquisition to identification</font>",  
+	<em>the iDigBio inaugural conference</em>, Ann Arbor, MI; June 2017.
 <br>
 </p>
 </div>
 </li>
 
-
+	
 <li>
 <div class="publication">
-<p> Derek S. Haselhorst, <b>Shu Kong</b>, Charless C. Fowlkes, J. Enrique Moreno, David K. Tcheng, Surangi W. Punyasena, "<font color=#AF7817>Automating tropical pollen counts using convolutional neural nets: from image acquisition to identification</font>",  <em>the iDigBio inaugural conference</em>, 2017.
+<p> Surangi W. Punyasena, <b>Shu Kong</b>, Charless C. Fowlkes, and Stephen P. Jackson, 
+	"<font color=#AF7817>Reconstructing the extinction dynamics of Picea critchfieldii - the application of computer vision to fossil pollen analysis
+</font>",  <em>the iDigBio inaugural conference</em>, Ann Arbor, MI; June 2017.
 <br>
 </p>
 </div>
 </li>
 
-<li>
-<div class="publication">
-<p> Surangi W. Punyasena, <b>Shu Kong</b>, Charless C. Fowlkes, and Stephen P. Jackson, "<font color=#AF7817>Reconstructing the extinction dynamics of Picea critchfieldii - the application of computer vision to fossil pollen analysis
-</font>",  <em>the iDigBio inaugural conference</em>, 2017.
-<br>
-</p>
-</div>
-</li>
-
+	
 <li>
 <div class="publication">
 <p> <b>Shu Kong</b>, Charless C. Fowlkes "<font color=#AF7817>Low-rank Bilinear Pooling for Fine-Grained Classification</font>",  <em><a href="http://dolcit.cms.caltech.edu/scmls/">Southern California Machine Learning Symposium</a></em>, 2016.
