--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 <h3 style="font-size:20px;font-family:Times">Professional activities</h3>
 <ul style="font-size:15px;font-family:Times;line-height:16px">	
 	<li>
-		<a href="https://neurips.cc/Conferences/2024">Area Chair at NeurIPS'24</a>, <a href="https://cvpr.thecvf.com/Conferences/2024">Demo Chair at CVPR'24</a>,	
-		organizer of <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR & WACV</a>
+		<a href="https://neurips.cc/Conferences/2024">Area Chair at NeurIPS'24</a>; <a href="https://cvpr.thecvf.com/Conferences/2024">Demo Chair at CVPR'24</a>,	
+		organizer of <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR & WACV</a>; 
 	</li>
 	<li>
 		Panalist: NSF GRFP
@@ -146,8 +146,8 @@
 <li>
 <p>
 Congratulations to <a href="http://www.nicholasmilef.com/">Nick</a> on the  
-	<a href="https://s2024.siggraph.orgs/"  target="_blank">sggrh<img src="./aimerykong_files/siggraph24s.jpg", height="25"></a>
-	<!--a href="https://s2024.siggraph.org/"  target="_blank">SIGGRAPH'24<img src="./aimerykong_files/siggraph24.jpg", height="25"></a--> 
+	<!--a href="https://s2024.siggraph.orgs/"  target="_blank">sggrh<img src="./aimerykong_files/siggraph24s.jpg", height="25"></a-->
+	<a href="https://s2024.siggraph.org/"  target="_blank">SIGGRAPH'24<img src="./aimerykong_files/siggraph24.jpg", height="25"></a> 
 	paper "<a href="./"  target="_blank">Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</a>"! (3/25/2024)
 </a>
 </li>
