--- a/index.html
+++ b/index.html
@@ -122,8 +122,10 @@
 <h3 style="font-size:20px;font-family:Times">Professional activities</h3>
 <ul style="font-size:15px;font-family:Times;line-height:16px">	
 	<li>
-		<a href="https://neurips.cc/Conferences/2024">Area Chair at NeurIPS'24</a>; <a href="https://cvpr.thecvf.com/Conferences/2024">Demo Chair at CVPR'24</a>,	
+		<a href="https://neurips.cc/Conferences/2024">Area Chair at NeurIPS'24</a>; 
+		<a href="https://cvpr.thecvf.com/Conferences/2024">Demo Chair at CVPR'24</a>,	
 		organizer of <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR & WACV</a>; 
+		<a href="https://www.sciencedirect.com/journal/pattern-recognition">Associate Editor of Pattern Recognition</a>;
 	</li>
 	<li>
 		Panalist: NSF GRFP
