--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
 <h3 style="font-size:20px;font-family:Times">contact</h3>
-<ul style="font-size:15px;font-family:Times;line-height:17px">
+<ul style="font-size:15px;font-family:Times;line-height:18px">
 <li>email: shu [at] tamu [dot] edu   [issues related to TAMU]</li>
 <li>email: skong [at] um [dot] edu [dot] mo   [issues related to the University of Macau]</li>
 <li>gmail: aimerykong [at] gmail [dot] com    [issues related to others; unlikely to reply]</li>
@@ -81,7 +81,7 @@
 
 		
 <h3 style="font-size:20px;font-family:Times">Links</h3>
-<ul style="font-size:15px;font-family:Times;line-height:16px">	
+<ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
 	<a href="https://vplow.github.io/vplow_4th.html">The 4th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'24</a>
 	</li>
@@ -104,7 +104,7 @@
 
 		
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
-<ul style="font-size:15px;font-family:Times;line-height:16px">
+<ul style="font-size:15px;font-family:Times;line-height:18px">
 	<li>
 		[CISC7014] Advanced Topics in Computer Science: Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC7014_2023-2024.pdf
 ">syllabus</a>] (Spring 2024, UMacau)
@@ -120,18 +120,18 @@
 
 		
 <h3 style="font-size:20px;font-family:Times">Professional activities</h3>
-<ul style="font-size:15px;font-family:Times;line-height:16px">	
-	<li>
-		<a href="https://neurips.cc/Conferences/2024">Area Chair at NeurIPS'24</a>; 
-		<a href="https://cvpr.thecvf.com/Conferences/2024">Demo Chair at CVPR'24</a>,	
-		organizer of <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR & WACV</a>; 
-		<a href="https://www.sciencedirect.com/journal/pattern-recognition">Associate Editor of Pattern Recognition</a>;
+<ul style="font-size:15px;font-family:Times;line-height:18px">	
+	<li>	<a href="https://neurips.cc/Conferences/2024">Area Chair at NeurIPS'24</a>;
 	</li>
-	<li>
-		Panalist: NSF GRFP
+	<li>	<a href="https://cvpr.thecvf.com/Conferences/2024">Demo Chair at CVPR'24</a>;
+	</li>
+	<li>	organizer of <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR & WACV</a>; 
+	</li>
+	<li>	<a href="https://www.sciencedirect.com/journal/pattern-recognition">Associate Editor of Pattern Recognition</a>;
+	</li>
+	<li>	Panalist: NSF GRFP
 	</li>	
-	<li>
-		Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ACL, ICML, IJCV, PAMI, Nature, PLOS One, RA-L, TIP, etc.
+	<li>	Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ACL, ICML, IJCV, PAMI, Nature, PLOS One, RA-L, TIP, etc.
 	</li>	
 </ul>
 
@@ -143,7 +143,7 @@
 
 <h3 style="font-size:20px;font-family:Times">Research Updates</h3>
 
-<ul style="font-size:15px;font-family:Times">
+<ul style="font-size:15px;font-family:Times;line-height:20px">
 
 <li>
 <p>
