--- a/publication.html
+++ b/publication.html
@@ -49,17 +49,17 @@
 
 <tr>
 <td width="35%" height=150>
-<a href="./">
+<a href="https://doi.org/10.1145/3641519.3657522">
 <img src="aimerykong_files/UUO-mocap.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="./"><b>Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</b></a>
+<a href="https://doi.org/10.1145/3641519.3657522"><b>Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</b></a>
 <br>
 N. Milef, J. Keyser, S. Kong
 <br>
-In <a href="https://s2024.siggraph.org/">siggraph</a>, 2024<br>
-[<a href="./">to appear</a>]
+In <a href="https://s2024.siggraph.org/">SIGGRAPH</a>, 2024<br>
+[<a href="https://doi.org/10.1145/3641519.3657522">paper</a>]
 <br>
 </td>	
 
