--- a/publication.html
+++ b/publication.html
@@ -59,7 +59,8 @@
 N. Milef, J. Keyser, S. Kong
 <br>
 In <a href="https://s2024.siggraph.org/">SIGGRAPH</a>, 2024<br>
-[<a href="https://doi.org/10.1145/3641519.3657522">paper</a>]
+[<a href="https://doi.org/10.1145/3641519.3657522">paper</a>] 
+[<a href="https://github.com/NicholasMilef/UUO-Mocap">code</a>]
 <br>
 </td>	
 
