--- a/index.html
+++ b/index.html
@@ -145,10 +145,20 @@
 
 <ul style="font-size:15px;font-family:Times;line-height:20px">
 
+
+<li>
+<p>
+Congratulations to <a href="https://www.linkedin.com/in/elvishelvisshi/">Jia</a> on the  
+	<a href="https://icml.cc/Conferences/2024"  target="_blank">ICML'24<img src="./aimerykong_files/icml2024-logo.jpg", height="25"></a>
+	paper "<a href="./"  target="_blank">LCA-on-the-Line: Benchmarking Out of Distribution Generalization with Class Taxonomies</a>"! (5/2/2024)
+</a>
+</li>
+
+	
 <li>
 <p>
 Congratulations to <a href="http://www.nicholasmilef.com/">Nick</a> on the  
-	<!--a href="https://s2024.siggraph.orgs/"  target="_blank">sggrh<img src="./aimerykong_files/siggraph24s.jpg", height="25"></a-->
+	<!--a href="https://s2024.siggraph.orgs/"  target="_blank">sggrph<img src="./aimerykong_files/siggraph24s.jpg", height="25"></a-->
 	<a href="https://s2024.siggraph.org/"  target="_blank">SIGGRAPH'24<img src="./aimerykong_files/siggraph24.jpg", height="25"></a> 
 	paper "<a href="https://doi.org/10.1145/3641519.3657522"  target="_blank">Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</a>"! (3/25/2024)
 </a>
