--- a/publication.html
+++ b/publication.html
@@ -49,6 +49,30 @@
 
 <tr>
 <td width="35%" height=150>
+<a href="./">
+<img src="aimerykong_files/icml24-splahy-fig.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="./"><b>LCA-on-the-Line: Benchmarking Out of Distribution Generalization with Class Taxonomies</b></a>
+<br>
+J. Shi, G. Gare, J. Tian, S. Chai, Z. Lin, A. Vasudevan, D. Feng, F. Ferroni, S. Kong
+<br>
+In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024<br>
+[<a href="./">paper to appear</a>] 
+<br>
+</td>	
+
+
+
+
+	
+
+	
+
+
+<tr>
+<td width="35%" height=150>
 <a href="https://doi.org/10.1145/3641519.3657522">
 <img src="aimerykong_files/UUO-mocap.jpg" height="120"  border="0">
 </a><br>
