--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 	</li>
 	<li>	<a href="https://cvpr.thecvf.com/Conferences/2024">Demo Chair at CVPR'24</a>;
 	</li>
-	<li>	organizer of <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR & WACV</a>; 
+	<li>	organizer： <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR & WACV</a>; 
 	</li>
-	<li>	<a href="https://www.sciencedirect.com/journal/pattern-recognition">Associate Editor of Pattern Recognition</a>;
+	<li>	<a href="https://www.sciencedirect.com/journal/pattern-recognition">Associate Editor: Pattern Recognition</a>;
 	</li>
 	<li>	Panalist: NSF GRFP
 	</li>	
