--- a/publication.html
+++ b/publication.html
@@ -60,6 +60,7 @@ J. Shi, G. Gare, J. Tian, S. Chai, Z. Lin, A. Vasudevan, D. Feng, F. Ferroni, S.
 <br>
 In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024<br>
 [<a href="./">paper to appear</a>] 
+	[<a href="https://github.com/ElvishElvis/LCA-on-the-line">code</a>]
 <br>
 </td>	
 
