--- a/publication.html
+++ b/publication.html
@@ -84,8 +84,9 @@ In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024<br>
 N. Milef, J. Keyser, S. Kong
 <br>
 In <a href="https://s2024.siggraph.org/">SIGGRAPH</a>, 2024<br>
-[<a href="https://doi.org/10.1145/3641519.3657522">paper</a>] 
+[<a href="https://www.youtube.com/watch?v=FVAwfc5vXV0">video demo</a>] 
 [<a href="https://github.com/NicholasMilef/UUO-Mocap">code</a>]
+[<a href="https://doi.org/10.1145/3641519.3657522">paper</a>] 
 <br>
 </td>	
 
