--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Congratulations to <a href="https://www.linkedin.com/in/elvishelvisshi/">Jia</a>
 Congratulations to <a href="http://www.nicholasmilef.com/">Nick</a> on the  
 	<!--a href="https://s2024.siggraph.orgs/"  target="_blank">sggrph<img src="./aimerykong_files/siggraph24s.jpg", height="25"></a-->
 	<a href="https://s2024.siggraph.org/"  target="_blank">SIGGRAPH'24<img src="./aimerykong_files/siggraph24.jpg", height="25"></a> 
-	paper "<a href="https://doi.org/10.1145/3641519.3657522"  target="_blank">Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</a>"! (3/25/2024)
+	paper "<a href="https://res.cloudinary.com/hes7dykgv/image/upload/v1716166902/Documents/ennwo812muxljckwcooz.pdf"  target="_blank">Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</a>"! (3/25/2024)
 </a>
 </li>
 
