--- a/publication.html
+++ b/publication.html
@@ -79,14 +79,16 @@ In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024<br>
 </a><br>
 </td>
 <td>
-<a href="https://doi.org/10.1145/3641519.3657522"><b>Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</b></a>
+<a href="https://res.cloudinary.com/hes7dykgv/image/upload/v1716166902/Documents/ennwo812muxljckwcooz.pdf"><b>Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</b></a>
 <br>
 N. Milef, J. Keyser, S. Kong
 <br>
 In <a href="https://s2024.siggraph.org/">SIGGRAPH</a>, 2024<br>
+[<a href="http://www.nicholasmilef.com/projects/towards_unstructured_unlabeled_optical_mocap">website</a>]
 [<a href="https://www.youtube.com/watch?v=FVAwfc5vXV0">video demo</a>] 
 [<a href="https://github.com/NicholasMilef/UUO-Mocap">code</a>]
-[<a href="https://doi.org/10.1145/3641519.3657522">paper</a>] 
+[<a href="https://res.cloudinary.com/hes7dykgv/image/upload/v1716166902/Documents/ennwo812muxljckwcooz.pdf">paper</a>] 
+[<a href="https://drive.google.com/drive/folders/1S-pHcope9VYS-h9ye2LlV2jpfYYEXELI?usp=drive_link">data</a>]
 <br>
 </td>	
 
