--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
 <p>
 Congratulations to <a href="https://www.linkedin.com/in/elvishelvisshi/">Jia</a> on the  
 	<a href="https://icml.cc/Conferences/2024"  target="_blank">ICML'24<img src="./aimerykong_files/icml2024-logo.jpg", height="25"></a>
-	paper "<a href="./"  target="_blank">LCA-on-the-Line: Benchmarking Out of Distribution Generalization with Class Taxonomies</a>"! (5/2/2024)
+	paper "<a href="./"  target="_blank">LCA-on-the-Line: Benchmarking Out of Distribution Generalization with Class Taxonomies</a>",
+	which is accepted for <font color=ff3399>oral presentation</font>! (5/2/2024)
 </a>
 </li>
 
