--- a/publication.html
+++ b/publication.html
@@ -58,7 +58,7 @@
 <br>
 J. Shi, G. Gare, J. Tian, S. Chai, Z. Lin, A. Vasudevan, D. Feng, F. Ferroni, S. Kong
 <br>
-In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024<br>
+In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024<br> (<font color=ff3399>oral presentation</font>)
 [<a href="./">paper to appear</a>] 
 	[<a href="https://github.com/ElvishElvis/LCA-on-the-line">code</a>]
 <br>
