--- a/publication.html
+++ b/publication.html
@@ -58,9 +58,9 @@
 <br>
 J. Shi, G. Gare, J. Tian, S. Chai, Z. Lin, A. Vasudevan, D. Feng, F. Ferroni, S. Kong
 <br>
-In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024<br> (<font color=ff3399>oral presentation</font>)
+In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024 (<font color=ff3399>oral presentation</font>)<br>
 [<a href="./">paper to appear</a>] 
-	[<a href="https://github.com/ElvishElvis/LCA-on-the-line">code</a>]
+[<a href="https://github.com/ElvishElvis/LCA-on-the-line">code</a>]
 <br>
 </td>	
 
