--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 <li>
 <p>
-Congratulations to <a href="https://anirudh-chakravarthy.github.io/">Anirudh</a> and <a href="https://g-meghana-reddy.github.io/">Megana</a> on the  
+Congratulations to <a href="https://anirudh-chakravarthy.github.io/">Anirudh</a> and <a href="https://g-meghana-reddy.github.io/">Meghana</a> on the  
 	<a href="https://link.springer.com/journal/11263"  target="_blank">IJCV</a>
 	paper "<a href="./"  target="_blank">Lidar Panoptic Segmentation in an Open World</a>"! (6/4/2024)
 </a>
