--- a/publication.html
+++ b/publication.html
@@ -44,6 +44,28 @@
 
 
 
+	
+<tr>
+<td width="35%" height=150>
+<a href="./">
+<img src="aimerykong_files/IJCV2024.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="./"><b>Lidar Panoptic Segmentation in an Open World</b></a>
+<br>
+A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taix ́e, S. Kong, D. Ramanan, A. Osep
+<br>
+<a href="https://link.springer.com/journal/11263">IJCV</a>, 2024
+[<a href="./">paper to appear</a>] 
+[<a href="./">code</a>]
+<br>
+</td>	
+
+
+
+	
+
 
 
 
