--- a/publication.html
+++ b/publication.html
@@ -56,7 +56,7 @@
 <br>
 A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taix ́e, S. Kong, D. Ramanan, A. Osep
 <br>
-<a href="https://link.springer.com/journal/11263">IJCV</a>, 2024
+<a href="https://link.springer.com/journal/11263">IJCV</a>, 2024<br>
 [<a href="./">paper to appear</a>] 
 [<a href="./">code</a>]
 <br>
