--- a/publication.html
+++ b/publication.html
@@ -54,9 +54,9 @@
 <td>
 <a href="./"><b>Lidar Panoptic Segmentation in an Open World</b></a>
 <br>
-A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taix ́e, S. Kong, D. Ramanan, A. Osep
+A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, A. Osep
 <br>
-<a href="https://link.springer.com/journal/11263">IJCV</a>, 2024<br>
+<a href="https://link.springer.com/journal/11263">International Journal of Computer Vision (IJCV)</a>, 2024<br>
 [<a href="./">paper to appear</a>] 
 [<a href="./">code</a>]
 <br>
