--- a/publication.html
+++ b/publication.html
@@ -58,7 +58,7 @@ A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, 
 <br>
 <a href="https://link.springer.com/journal/11263">International Journal of Computer Vision (IJCV)</a>, 2024<br>
 [<a href="./">paper to appear</a>] 
-[<a href="./">code</a>]
+[<a href="./">code to release</a>]
 <br>
 </td>	
 
@@ -235,6 +235,7 @@ Proceedings of the National Academy of Sciences (PNAS) Nexus, 2024<br>
 [<a href="https://www.igb.illinois.edu/article/machine-learning-used-classify-fossils-extinct-pollen">News</a>]
 <br>
 </td>
+
 	
 	
 <tr>
@@ -254,6 +255,25 @@ arXiv:2404.01064, 2024<br>
 </td>
 
 
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2404.16972">
+<img src="aimerykong_files/crisp" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2404.16972"><b>CriSp: Leveraging Tread Depth Maps for Enhanced Crime-Scene Shoeprint Matching</b></a>
+<br>
+S. Shafique, S. Kong, C. Fowlkes
+<br>
+arXiv:2404.16972, 2024<br>
+[<a href="https://arxiv.org/abs/2404.16972">paper</a>]
+[<a href="https://github.com/Samia067/CriSp">code</a>]
+<br>
+</td>
+
+	
 	
 <tr>
 <td width="35%" height=150>
@@ -267,12 +287,10 @@ arXiv:2404.01064, 2024<br>
 <br>
 Y. Ma, N. Peri, S. Wei, W. Hua, D. Ramanan, Y. Li, S. Kong
 <br>
-arXiv:2312.10986, 2023<br>
+arXiv:2312.10986, 2024<br>
 [<a href="https://arxiv.org/abs/2312.10986">paper</a>]
 <br>
 </td>
-		
-
 
 
 <tr>
@@ -287,23 +305,11 @@ arXiv:2312.10986, 2023<br>
 <br>
 A. Madan, N. Peri, S. Kong, D. Ramanan
 <br>
-arXiv:2312.14494, 2023<br>
+arXiv:2312.14494, 2024<br>
 [<a href="https://arxiv.org/abs/2312.14494">paper</a>]
 <br>
 </td>
 		
-
-
-
-
-
-
-
-
-	
-	
-
-
 
 
 
