--- a/group.html
+++ b/group.html
@@ -43,20 +43,20 @@
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://sites.google.com/site/samiashafique067/">Samia Shafique</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
-		<li><a href="https://www.ics.uci.edu/~yunhaz5/">Yunhan Zhao</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
+		<li><a href="https://www.ics.uci.edu/~yunhaz5/">Yunhan Zhao</a> (PhD at UCI, co-advised by Charless Fowlkes; now at Google)</li>
 		<li><a href="https://scholar.google.com/citations?user=fHWXpq4AAAAJ&hl=en">Jacob Fang</a> (PhD at ASU, now at Amazon Alexa AI)</li>
-		<li><a href="https://shubhamprshr27.github.io/">Shubham Parashar</a> (Master at TAMU)</li>
+		<li><a href="https://shubhamprshr27.github.io/">Shubham Parashar</a> (Master at TAMU; now PhD student at TAMU)</li>
 		<li><a href="./">Runzhi Wang</a> (Master at TAMU, co-adivsed by Jiang Hu)</li>
-		<li><a href="http://publish.illinois.edu/punyasena/lab-members/">Jennifer Feng</a> (Master at UIUC, co-advised by Surangi Punyasena)</li>
+		<li><a href="http://publish.illinois.edu/punyasena/lab-members/">Jennifer Feng</a> (Master at UIUC, co-advised by Surangi Punyasena; now PhD at UPenn)</li>
 		<li><a href="https://aimerykong.github.io/group.html">Satish Reddy</a> (Master at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="https://aimerykong.github.io/group.html">Shubham Gupta</a> (Master at TAMU, co-advised by Ruihong Huang)</li>
-		<li><a href="https://scholar.google.com/citations?user=asHobe0AAAAJ&hl=en">Jia Shi</a> (MSCV at CMU)</li>
-		<li><a href="https://g-meghana-reddy.github.io/">Meghana Reddy Ganesina</a> (MSCV at CMU)</li>
+		<li><a href="https://scholar.google.com/citations?user=asHobe0AAAAJ&hl=en">Jia Shi</a> (MSCV at CMU; now at Waymo)</li>
+		<li><a href="https://g-meghana-reddy.github.io/">Meghana Reddy Ganesina</a> (MSCV at CMU; now at Zoox)</li>
 		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU)</li>
-		<li><a href="https://anirudh-chakravarthy.github.io/">Anirudh S Chakravarthy</a> (MSCV at CMU)</li>
+		<li><a href="https://anirudh-chakravarthy.github.io/">Anirudh S Chakravarthy</a> (MSCV at CMU; now at Cruise)</li>
 		<li><a href="https://jamie725.github.io/website/index.html">Yi-Ting Chen</a> (MSCV at CMU, now PhD at UMD)</li>
 		<li><a href="https://derrickwanglf.github.io/">Linfeng Wang</a> (Master at UCI, now at Microsoft)</li>
-		<li><a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">Jinghao Shi</a> (MSCV at CMU, now at Aibee)</li>
+		<li><a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">Jinghao Shi</a> (MSCV at CMU, now at TikTok)</li>
 		<li><a href="https://www.linkedin.com/in/zelinye/">Zelin Ye</a> (Master at CMU)</li>
 		<li><a href="https://www.linkedin.com/in/jeet-kanjani-a86062107/">Jeet Kanjani</a> (MSCV at CMU, now at Amazon)</li>
 		<li><a href="https://www.linkedin.com/in/shubham-gupta94/">Shubham Gupta</a> (MSCV at CMU, now at Apple)</li>
