--- a/publication.html
+++ b/publication.html
@@ -259,7 +259,7 @@ arXiv:2404.01064, 2024<br>
 <tr>
 <td width="35%" height=150>
 <a href="https://arxiv.org/abs/2404.16972">
-<img src="aimerykong_files/crisp" height="120"  border="0">
+<img src="aimerykong_files/crisp.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
