--- a/publication.html
+++ b/publication.html
@@ -71,7 +71,7 @@ A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, 
 
 <tr>
 <td width="35%" height=150>
-<a href="./">
+<a href="https://openreview.net/forum?id=HPXRzM9BYZ">
 <img src="aimerykong_files/icml24-splahy-fig.jpg" height="120"  border="0">
 </a><br>
 </td>
@@ -81,7 +81,7 @@ A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, 
 J. Shi, G. Gare, J. Tian, S. Chai, Z. Lin, A. Vasudevan, D. Feng, F. Ferroni, S. Kong
 <br>
 In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024 (<font color=ff3399>oral presentation</font>)<br>
-[<a href="./">paper to appear</a>] 
+[<a href="https://openreview.net/forum?id=HPXRzM9BYZ">paper</a>] 
 [<a href="https://github.com/ElvishElvis/LCA-on-the-line">code</a>]
 <br>
 </td>	
