--- a/publication.html
+++ b/publication.html
@@ -67,6 +67,24 @@ A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, 
 	
 
 
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2406.11148">
+<img src="aimerykong_files/SWAT.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="./"><b>Few-Shot Recognition via Stage-Wise Augmented Finetuning</b></a>
+<br>
+Tian Liu, H. Zhang, S. Parashar, S. Kong
+<br>
+<a href="https://arxiv.org/abs/2406.11148">arXiv:2406.11148</a>, 2024<br>
+[<a href="https://arxiv.org/abs/2406.11148">preprint</a>] 
+[<a href="https://github.com/tian1327/SWAT">code</a>]
+<br>
+</td>	
+
+
 
 
 <tr>
