--- a/publication.html
+++ b/publication.html
@@ -55,6 +55,7 @@
 T. Liu, H. Zhang, S. Parashar, S. Kong
 <br>
 <a href="https://arxiv.org/abs/2406.11148">arXiv:2406.11148</a>, 2024<br>
+[<a href="https://tian1327.github.io/SWAT/">website</a>] 
 [<a href="https://arxiv.org/abs/2406.11148">preprint</a>] 
 [<a href="https://github.com/tian1327/SWAT">code</a>]
 <br>
@@ -75,7 +76,7 @@ A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, 
 <br>
 <a href="https://link.springer.com/journal/11263">International Journal of Computer Vision (IJCV)</a>, 2024<br>
 [<a href="./">paper to appear</a>] 
-[<a href="./">code to release</a>]
+[<a href="https://github.com/g-meghana-reddy/open-world-panoptic-segmentation">code</a>]
 <br>
 </td>	
 
