--- a/publication.html
+++ b/publication.html
@@ -70,7 +70,7 @@ T. Liu, H. Zhang, S. Parashar, S. Kong
 </a><br>
 </td>
 <td>
-<a href="./"><b>Lidar Panoptic Segmentation in an Open World</b></a>
+<a href="https://github.com/g-meghana-reddy/open-world-panoptic-segmentation"><b>Lidar Panoptic Segmentation in an Open World</b></a>
 <br>
 A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, A. Osep
 <br>
