--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <p>
 Congratulations to <a href="https://anirudh-chakravarthy.github.io/">Anirudh</a> and <a href="https://g-meghana-reddy.github.io/">Meghana</a> on the  
 	<a href="https://link.springer.com/journal/11263"  target="_blank">IJCV<img src="./aimerykong_files/logo_ijcv.jpg", height="25"></a>
-	paper "<a href="./"  target="_blank">Lidar Panoptic Segmentation in an Open World</a>"! (6/4/2024)
+	paper "<a href="https://github.com/g-meghana-reddy/open-world-panoptic-segmentation"  target="_blank">Lidar Panoptic Segmentation in an Open World</a>"! (6/4/2024)
 </a>
 </li>
 	
