--- a/group.html
+++ b/group.html
@@ -57,25 +57,25 @@
 		<li><a href="https://jamie725.github.io/website/index.html">Yi-Ting Chen</a> (MSCV at CMU, now PhD at UMD)</li>
 		<li><a href="https://derrickwanglf.github.io/">Linfeng Wang</a> (Master at UCI, now at Microsoft)</li>
 		<li><a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">Jinghao Shi</a> (MSCV at CMU, now at TikTok)</li>
-		<li><a href="https://www.linkedin.com/in/zelinye/">Zelin Ye</a> (Master at CMU)</li>
+		<li><a href="https://www.linkedin.com/in/zelinye/">Zelin Ye</a> (Master at CMU; now Engineer at CMU)</li>
 		<li><a href="https://www.linkedin.com/in/jeet-kanjani-a86062107/">Jeet Kanjani</a> (MSCV at CMU, now at Amazon)</li>
 		<li><a href="https://www.linkedin.com/in/shubham-gupta94/">Shubham Gupta</a> (MSCV at CMU, now at Apple)</li>
 	</ul>
 	
 <h4>Undergraduate Students</h4>
 	<ul>
-		<li>Yoger Un Lok Chen (UMacau)</li>
-		<li>Keiran Xinyu Wang (UMacau)</li>
-		<li>Anna Yuting Cao (UMacau)</li>
-		<li>Bruce Zhuxuan Chen (UMacau)</li>
+		<li>Yoger Un Lok Chen (UMacau; now MS student at Tsinghua)</li>
+		<li>Keiran Xinyu Wang (UMacau; now MS at HKUST)</li>
+		<li>Anna Yuting Cao (UMacau; now MS at HKU)</li>
+		<li>Bruce Zhuxuan Chen (UMacau; now MS at PolyU)</li>
 		<li>Louise Ruoxuan Li (UMacau)</li>
-		<li><a href="https://github.com/ShadeAlsha">Shaden Alshammari</a> (RISS Fellow at CMU-RI, home institute MIT)</li>
-		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (RISS Fellow at CMU-RI, home institute UMD, now PhD at CMU)</li>
+		<li><a href="https://github.com/ShadeAlsha">Shaden Alshammari</a> (RISS Fellow at CMU-RI, home institute MIT; now MS student at MIT)</li>
+		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (RISS Fellow at CMU-RI, home institute UMD; now PhD at CMU)</li>
 	</ul>
 	
 <h4>High-School Students</h4>
 	<ul>
-		<li><a href="https://www.linkedin.com/in/sarthakjain101/">Sarthak Jain</a> (Summer 2022, Los Gatos High School)
+		<li><a href="https://www.linkedin.com/in/sarthakjain101/">Sarthak Jain</a> (Summer 2022, Los Gatos High School; now undergrad at UIUC)
 		</li>
 	</ul>
 
