--- a/group.html
+++ b/group.html
@@ -36,7 +36,7 @@
 		<li><a href="https://www.linkedin.com/in/tian1327/">Tian Liu</a> (PhD at TAMU)</li>
 		<li><a href="./">Huixin Zhang</a> (PhD at TAMU)</li>
 		<li><a href="./">Tong Wang</a> (PhD at UMacau)</li>
-		<li><a href="https://github.com/Ezharjan">Alexander Ezharjan</a> (MS at UMacau)</li>
+		<li><a href="https://github.com/Ezharjan">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD at UIUC, co-advised by Surangi Punyasena)</li>
