--- a/publication.html
+++ b/publication.html
@@ -43,6 +43,51 @@
 
 
 
+
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND">
+<img src="aimerykong_files/KD-dino.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2305.17007"><b>Improving Knowledge Distillation via Regularizing Feature Norm and Direction
+</b></a>
+<br>
+Y. Wang, L. Cheng, M. Duan, Y. Wang, Z. Feng, S. Kong
+<br>
+In ECCV, 2024
+<br>
+[<a href="https://arxiv.org/abs/2305.17007">preprint</a>]
+[<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND">github</a>]
+<br>
+</td>
+
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2404.16972">
+<img src="aimerykong_files/crisp.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2404.16972"><b>CriSp: Leveraging Tread Depth Maps for Enhanced Crime-Scene Shoeprint Matching</b></a>
+<br>
+S. Shafique, S. Kong, C. Fowlkes
+<br>
+In ECCV, 2024<br>
+[<a href="https://arxiv.org/abs/2404.16972">preprint</a>]
+[<a href="https://github.com/Samia067/CriSp">code</a>]
+<br>
+</td>
+
+
+
+
+	
 <tr>
 <td width="35%" height=150>
 <a href="https://arxiv.org/abs/2406.11148">
@@ -275,23 +320,6 @@ arXiv:2404.01064, 2024<br>
 
 
 
-<tr>
-<td width="35%" height=150>
-<a href="https://arxiv.org/abs/2404.16972">
-<img src="aimerykong_files/crisp.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2404.16972"><b>CriSp: Leveraging Tread Depth Maps for Enhanced Crime-Scene Shoeprint Matching</b></a>
-<br>
-S. Shafique, S. Kong, C. Fowlkes
-<br>
-arXiv:2404.16972, 2024<br>
-[<a href="https://arxiv.org/abs/2404.16972">paper</a>]
-[<a href="https://github.com/Samia067/CriSp">code</a>]
-<br>
-</td>
-
 	
 	
 <tr>
@@ -410,37 +438,6 @@ In NeurIPS Datasets and Benchmarks, 2023
 
 
 
-
-<tr>
-<td width="35%" height=150>
-<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND">
-<img src="aimerykong_files/KD-dino.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2305.17007"><b>Improving Knowledge Distillation via Regularizing Feature Norm and Direction
-</b></a>
-<br>
-Y. Wang, L. Cheng, M. Duan, Y. Wang, Z. Feng, S. Kong
-<br>
-arXiv:2305.17007, 2023
-<br>
-[<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND">github</a>]
-[<a href="https://arxiv.org/abs/2305.17007">paper</a>]
-<br>
-</td>
-
-
-
-
-
-
-
-
-	
-
-
-	
 
 
 	
