--- a/index.html
+++ b/index.html
@@ -147,6 +147,30 @@
 
 
 
+
+
+
+	
+<li>
+<p>
+Congratulations to <a href="https://github.com/WangYZ1608">Yuzhu</a> on the  
+	<a href="https://eccv.ecva.net/"  target="_blank">ECCV<img src="./aimerykong_files/eccv2024-logo.jpg", height="25"></a>
+	paper "<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND"  target="_blank">Improving Knowledge Distillation via Regularizing Feature Norm and Direction</a>"! (7/1/2024)
+</a>
+</li>
+	
+
+
+	
+<li>
+<p>
+Congratulations to <a href="https://sites.google.com/site/samiashafique067/">Samia</a> on the  
+	<a href="https://eccv.ecva.net/"  target="_blank">ECCV<img src="./aimerykong_files/eccv2024-logo.jpg", height="25"></a>
+	paper "<a href="https://arxiv.org/abs/2404.16972"  target="_blank">CriSp: Leveraging Tread Depth Maps for Enhanced Crime-Scene Shoeprint Matching</a>"! (7/1/2024)
+</a>
+</li>
+	
+
 <li>
 <p>
 Congratulations to <a href="https://anirudh-chakravarthy.github.io/">Anirudh</a> and <a href="https://g-meghana-reddy.github.io/">Meghana</a> on the  
