--- a/group.html
+++ b/group.html
@@ -75,6 +75,8 @@
 	
 <h4>High-School Students</h4>
 	<ul>
+		<li><a href="./">Sophie Zhou</a> (Summer 2024)
+		</li>
 		<li><a href="https://www.linkedin.com/in/sarthakjain101/">Sarthak Jain</a> (Summer 2022, Los Gatos High School; now undergrad at UIUC)
 		</li>
 	</ul>
